--- a/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
+++ b/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controlador.CotizacionesController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controlador.ControladorCotizaciones">
    <children>
       <TabPane prefHeight="550.0" prefWidth="840.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
