--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -123,7 +123,7 @@
             </GridPane>
          </children>
       </Pane>
-      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0" visible="false">
+      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0">
          <children>
             <Pane fx:id="panelContenedor" layoutX="33.0" minHeight="617.0" minWidth="806.0" prefHeight="617.0" prefWidth="806.0">
                <children>
@@ -135,63 +135,7 @@
                   <AnchorPane fx:id="panelOrdenes" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" visible="false" />
                   <AnchorPane fx:id="panelCotizaciones" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" visible="false" />
                   <AnchorPane fx:id="panelVentas" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" visible="false" />
-                  <AnchorPane fx:id="panelNotificaciones" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" visible="false">
-                     <children>
-                        <AnchorPane layoutX="424.0" layoutY="14.0" prefHeight="326.0" prefWidth="368.0" style="-fx-background-color: C4DCF2;">
-                           <children>
-                              <Label layoutX="50.0" layoutY="145.0" text="Vendedor: *************">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="50.0" layoutY="173.0" text="Vehiculo: *************">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Button layoutX="23.0" layoutY="275.0" mnemonicParsing="false" onMouseClicked="#crearOrden" prefWidth="100.0" style="-fx-background-color: #66c00b;" text="Aprobar">
-                                 <font>
-                                    <Font name="Verdana Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Button layoutX="133.0" layoutY="275.0" mnemonicParsing="false" onMouseClicked="#crearOrden" prefWidth="100.0" style="-fx-background-color: #F03030;" text="Rechazar">
-                                 <font>
-                                    <Font name="Verdana Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Button layoutX="243.0" layoutY="275.0" mnemonicParsing="false" onMouseClicked="#crearOrden" prefWidth="100.0" style="-fx-background-color: #76A2CB;" text="Cancelar">
-                                 <font>
-                                    <Font name="Verdana Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Label layoutX="50.0" layoutY="201.0" text="Sede origen: *************">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="25.0" layoutY="80.0" text="¿Desea pedir el traslado del vehiculo para">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="25.0" layoutY="100.0" text="  esta sede?">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" layoutX="56.0" layoutY="25.0" text="Solicitud de traslado">
-                                 <font>
-                                    <Font name="Verdana" size="25.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="50.0" layoutY="229.0" text="Estado: Esperando aprobación externa." visible="false">
-                                 <font>
-                                    <Font name="Verdana" size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </AnchorPane>
-                     </children></AnchorPane>
+                  <AnchorPane fx:id="panelNotificaciones" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" visible="false" />
                </children>
             </Pane>
             <Pane fx:id="panelOpciones" prefHeight="617.0" prefWidth="242.0">
@@ -262,7 +206,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button fx:id="boton_cerrar" alignment="BASELINE_CENTER" layoutY="480.0" mnemonicParsing="false" onAction="#cerrar" onMouseEntered="#cambiarColor" onMouseExited="#resetearColor" prefHeight="45.0" prefWidth="217.0" style="-fx-background-color: #CE5F56;" text="Cerrar" textFill="WHITE">
+                        <Button fx:id="boton_cerrar" alignment="BASELINE_CENTER" layoutY="480.0" mnemonicParsing="false" onAction="#cerrar" prefHeight="45.0" prefWidth="217.0" style="-fx-background-color: #CE5F56;" text="Cerrar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -279,7 +223,7 @@
                               </ImageView>
                               <Label fx:id="nombre_usuario_inicio" alignment="CENTER" layoutX="61.0" layoutY="8.0" prefHeight="39.0" prefWidth="126.0" textAlignment="CENTER" textFill="WHITE" />
                               <Label fx:id="rol_usuario_inicio" alignment="CENTER" layoutX="80.0" layoutY="47.0" prefHeight="17.0" prefWidth="89.0" textAlignment="CENTER" textFill="WHITE" />
-                              <Button fx:id="boton_usuario_lateral1" layoutX="-5.0" layoutY="30.0" mnemonicParsing="false" onAction="#botonUsuario" onMouseEntered="#desplegarBoton" onMouseExited="#esconderBoton" prefHeight="25.0" prefWidth="25.0" style="-fx-background-color: transparent;">
+                              <Button fx:id="boton_notificacion" layoutX="-5.0" layoutY="30.0" mnemonicParsing="false" onMouseEntered="#cambiarColor" onMouseExited="#resetearColor" prefHeight="25.0" prefWidth="25.0" style="-fx-background-color: #808080;">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
