--- a/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
+++ b/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,35 +19,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controlador.ControladorCotizaciones">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorCotizaciones">
    <children>
       <TabPane prefHeight="550.0" prefWidth="840.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text=" Cotizaciones">
+          <Tab style="-fx-background-color: C1C3C4;" text=" Cotizaciones">
                <content>
-                  <AnchorPane prefHeight="505.0" prefWidth="703.0">
+                  <AnchorPane prefHeight="505.0" prefWidth="703.0" style="-fx-background-color: C4DCF2;">
                      <children>
-                        <Label layoutX="353.0" layoutY="32.0" text="Cotizacion">
+                        <Label layoutX="353.0" layoutY="32.0" text="Cotización">
                            <font>
                               <Font name="Verdana" size="26.0" />
                            </font>
                         </Label>
                         <ComboBox fx:id="combo_unidades_cotizacion" layoutX="316.0" layoutY="217.0" prefWidth="150.0" promptText="Unidades" />
-                        <Label layoutX="39.0" layoutY="97.0" text="Informacion del automovil" />
-                        <Label layoutX="55.0" layoutY="130.0" text="automovil (ID)">
+                        <Label layoutX="39.0" layoutY="97.0" text="Información del Automóvil" />
+                        <Label layoutX="55.0" layoutY="130.0" text="Automóvil (ID)">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_IDautomovil_cotizacion" layoutX="190.0" layoutY="128.0" prefHeight="25.0" prefWidth="84.0" />
-                        <Label layoutX="41.0" layoutY="263.0" text="Informacion del Cliente" />
+                        <Label layoutX="41.0" layoutY="263.0" text="Información del Cliente" />
                         <TextField fx:id="txt_cedula_cotizacion" layoutX="143.0" layoutY="291.0" />
                         <TextField fx:id="txt_nombre_cotizacion" layoutX="143.0" layoutY="331.0" />
                         <TextField fx:id="txt_direccion_cotizacion" layoutX="143.0" layoutY="376.0" />
                         <TextField fx:id="txt_telefono_cotizacion" layoutX="405.0" layoutY="291.0" />
                         <TextField fx:id="txt_correo_cotizacion" layoutX="405.0" layoutY="376.0" />
-                        <Label layoutX="55.0" layoutY="294.0" text="Cedula:">
+                        <Label layoutX="55.0" layoutY="294.0" text="Cédula:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -51,12 +56,12 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="55.0" layoutY="379.0" text="Direccion:">
+                        <Label layoutX="55.0" layoutY="379.0" text="Dirección:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="316.0" layoutY="294.0" text="Telefono:">
+                        <Label layoutX="316.0" layoutY="294.0" text="Teléfono:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -66,18 +71,21 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="316.0" layoutY="334.0" text="Genero:">
+                        <Label layoutX="316.0" layoutY="334.0" text="Género:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_genero_cotizacion" layoutX="405.0" layoutY="332.0" />
-                        <Label layoutX="41.0" layoutY="420.0" text="Informacion del vendedor" />
+                        <Label layoutX="41.0" layoutY="420.0" text="Informacion del Vendedor" />
                         <Separator layoutX="186.0" layoutY="423.0" prefHeight="11.0" prefWidth="391.0" />
                         <Button fx:id="button_buscar_cotizacion" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="127.0" mnemonicParsing="false" onAction="#buscar_automovil" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
                         </Button>
                         <Label layoutX="55.0" layoutY="464.0" text="Vendedor (ID)">
                            <font>
@@ -95,7 +103,7 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="313.0" layoutY="179.0" text="Linea:">
+                        <Label layoutX="313.0" layoutY="179.0" text="Línea:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -120,7 +128,76 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="  Registros   ">
+            <Tab style="-fx-background-color: C1C3C4;" text="Modificar Cliente">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: C4DCF2;">
+                     <children>
+                        <Label layoutX="254.0" layoutY="36.0" prefHeight="32.0" prefWidth="332.0" text="Modificación de Clientes">
+                           <font>
+                              <Font name="Verdana" size="25.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="157.0" layoutY="120.0" prefHeight="29.0" prefWidth="112.0" text="Cédula">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="bBuscarCliente" layoutX="548.0" layoutY="121.0" mnemonicParsing="false" onAction="#buscarCliente" prefHeight="28.0" prefWidth="139.0" style="-fx-background-color: #76A2CB;" text="Buscar Cliente" textFill="WHITE">
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
+                        </Button>
+                        <ComboBox fx:id="cbCedula" layoutX="263.0" layoutY="122.0" prefWidth="255.0" promptText="Elija la cédula del cliente" />
+                        <TextField fx:id="tfCorreoCliente" layoutX="548.0" layoutY="324.0" />
+                        <TextField fx:id="tfDireccionCliente" layoutX="121.0" layoutY="324.0" />
+                        <TextField fx:id="tfTelefonoCliente" layoutX="548.0" layoutY="222.0" />
+                        <TextField fx:id="tfNombreCliente" layoutX="120.0" layoutY="222.0" />
+                        <Label layoutX="120.0" layoutY="204.0" text="Nombre:">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="121.0" layoutY="306.0" text="Dirección:">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="548.0" layoutY="204.0" text="Teléfono:">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="548.0" layoutY="306.0" prefHeight="17.0" prefWidth="103.0" text="Correo:">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="bLimpiarCampos" layoutX="263.0" layoutY="422.0" mnemonicParsing="false" onAction="#limpiarCampos" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="bModificarCliente" layoutX="429.0" layoutY="422.0" mnemonicParsing="false" onAction="#modificarCliente" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Cliente" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
+                        </Button>
+                        <ImageView fitHeight="47.0" fitWidth="51.0" layoutX="207.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Recursos/clienteM.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab style="-fx-background-color: C1C3C4;" text="  Registros   ">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
