--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -123,7 +123,7 @@
             </GridPane>
          </children>
       </Pane>
-      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0">
+      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0" visible="false">
          <children>
             <Pane fx:id="panelContenedor" layoutX="33.0" minHeight="617.0" minWidth="806.0" prefHeight="617.0" prefWidth="806.0">
                <children>
