--- a/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
+++ b/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,40 +7,40 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorCotizaciones">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorCotizaciones">
    <children>
       <TabPane prefHeight="550.0" prefWidth="840.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab style="-fx-background-color: C1C3C4;" text=" Cotizaciones">
+            <Tab text=" Cotizaciones">
                <content>
-                  <AnchorPane prefHeight="505.0" prefWidth="703.0" style="-fx-background-color: C4DCF2;">
+                  <AnchorPane prefHeight="505.0" prefWidth="703.0">
                      <children>
-                        <Label layoutX="353.0" layoutY="32.0" text="Cotización">
+                        <Label layoutX="353.0" layoutY="32.0" text="Cotizacion">
                            <font>
                               <Font name="Verdana" size="26.0" />
                            </font>
                         </Label>
                         <ComboBox fx:id="combo_unidades_cotizacion" layoutX="316.0" layoutY="217.0" prefWidth="150.0" promptText="Unidades" />
-                        <Label layoutX="39.0" layoutY="97.0" text="Información del Automóvil" />
-                        <Label layoutX="55.0" layoutY="130.0" text="Automóvil (ID)">
+                        <Label layoutX="39.0" layoutY="97.0" text="Informacion del automovil" />
+                        <Label layoutX="55.0" layoutY="130.0" text="automovil (ID)">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_IDautomovil_cotizacion" layoutX="190.0" layoutY="128.0" prefHeight="25.0" prefWidth="84.0" />
-                        <Label layoutX="41.0" layoutY="263.0" text="Información del Cliente" />
+                        <Label layoutX="41.0" layoutY="263.0" text="Informacion del Cliente" />
                         <TextField fx:id="txt_cedula_cotizacion" layoutX="143.0" layoutY="291.0" />
                         <TextField fx:id="txt_nombre_cotizacion" layoutX="143.0" layoutY="331.0" />
-                        <TextField fx:id="txt_direccion_cotizacion" layoutX="143.0" layoutY="376.0" />
-                        <TextField fx:id="txt_telefono_cotizacion" layoutX="405.0" layoutY="291.0" />
-                        <TextField fx:id="txt_correo_cotizacion" layoutX="405.0" layoutY="376.0" />
-                        <Label layoutX="55.0" layoutY="294.0" text="Cédula:">
+                        <TextField fx:id="txt_direccion_cotizacion" layoutX="144.0" layoutY="415.0" prefHeight="25.0" prefWidth="147.0" />
+                        <TextField fx:id="txt_telefono_cotizacion" layoutX="144.0" layoutY="375.0" prefHeight="25.0" prefWidth="148.0" />
+                        <TextField fx:id="txt_correo_cotizacion" layoutX="405.0" layoutY="331.0" prefHeight="25.0" prefWidth="162.0" />
+                        <Label layoutX="55.0" layoutY="294.0" text="Cedula:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -56,77 +50,119 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="55.0" layoutY="379.0" text="Dirección:">
+                        <Label layoutX="55.0" layoutY="418.0" text="Direccion:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="316.0" layoutY="294.0" text="Teléfono:">
+                        <Label layoutX="55.0" layoutY="378.0" text="Telefono:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="313.0" layoutY="379.0" prefHeight="17.0" prefWidth="103.0" text="Correo:">
+                        <Label layoutX="313.0" layoutY="335.0" prefHeight="17.0" prefWidth="103.0" text="Correo:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="316.0" layoutY="334.0" text="Género:">
-                           <font>
-                              <Font name="Verdana" size="16.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="txt_genero_cotizacion" layoutX="405.0" layoutY="332.0" />
-                        <Label layoutX="41.0" layoutY="420.0" text="Informacion del Vendedor" />
-                        <Separator layoutX="186.0" layoutY="423.0" prefHeight="11.0" prefWidth="391.0" />
+                        <Label layoutX="39.0" layoutY="452.0" text="Informacion del vendedor" />
+                        <Separator layoutX="184.0" layoutY="455.0" prefHeight="11.0" prefWidth="390.0" />
                         <Button fx:id="button_buscar_cotizacion" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="127.0" mnemonicParsing="false" onAction="#buscar_automovil" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
                         </Button>
-                        <Label layoutX="55.0" layoutY="464.0" text="Vendedor (ID)">
+                        <Label layoutX="55.0" layoutY="496.0" text="Vendedor (ID)">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_IDvendedor_cotizacion" layoutX="186.0" layoutY="462.0" prefHeight="25.0" prefWidth="77.0" />
+                        <TextField fx:id="txt_IDvendedor_cotizacion" layoutX="184.0" layoutY="494.0" prefHeight="25.0" prefWidth="77.0" />
                         <Label layoutX="55.0" layoutY="179.0" text="Marca:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="57.0" layoutY="220.0" text="Modelo:">
+                        <Label layoutX="55.0" layoutY="220.0" text="Modelo:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="313.0" layoutY="179.0" text="Línea:">
+                        <Label layoutX="313.0" layoutY="179.0" text="Linea:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
                         <Separator layoutX="181.0" layoutY="266.0" prefHeight="11.0" prefWidth="391.0" />
-                        <Separator layoutX="186.0" layoutY="100.0" prefHeight="11.0" prefWidth="385.0" />
+                        <Separator layoutX="186.0" layoutY="100.0" prefHeight="15.0" prefWidth="389.0" />
                         <TextField fx:id="txt_marca_cotizacion" layoutX="143.0" layoutY="176.0" />
                         <TextField fx:id="txt_modelo_cotizacion" layoutX="143.0" layoutY="217.0" />
                         <TextField fx:id="txt_linea_cotizacion" layoutX="382.0" layoutY="176.0" />
-                        <TableView fx:id="table_resumen_cotizacion" layoutX="646.0" layoutY="190.0" prefHeight="228.0" prefWidth="153.0">
-                          <columns>
-                            <TableColumn fx:id="concepto" prefWidth="73.99993896484375" text="Concepto" />
-                            <TableColumn fx:id="valor" prefWidth="77.3333740234375" text="Valor" />
-                          </columns>
-                        </TableView>
-                        <Label layoutX="593.0" layoutY="97.0" text="Resumen " />
-                        <Separator layoutX="646.0" layoutY="105.0" prefHeight="2.0" prefWidth="175.0" />
-                        <Separator layoutX="593.0" layoutY="130.0" orientation="VERTICAL" prefHeight="375.0" prefWidth="0.0" />
-                        <Button fx:id="button_resumen_cotizacion" layoutX="646.0" layoutY="138.0" mnemonicParsing="false" onAction="#generar_resumen" text="Generar Resumen" />
-                        <Button fx:id="button_confirmar_cotizacion" layoutX="672.0" layoutY="451.0" mnemonicParsing="false" onAction="#confirmar_cotizacion" prefHeight="46.0" prefWidth="101.0" text="Confirmar" />
+                        <Label layoutX="600.0" layoutY="97.0" text="Resumen " />
+                        <Separator layoutX="663.0" layoutY="105.0" prefHeight="1.0" prefWidth="158.0" />
+                        <Separator layoutX="591.0" layoutY="104.0" orientation="VERTICAL" prefHeight="401.0" prefWidth="8.0" />
+                        <Button fx:id="button_resumen_cotizacion" layoutX="619.0" layoutY="137.0" mnemonicParsing="false" onAction="#generar_resumen" text="Generar Resumen" />
+                        <Button fx:id="button_confirmar_cotizacion" layoutX="653.0" layoutY="446.0" mnemonicParsing="false" onAction="#confirmar_cotizacion" prefHeight="46.0" prefWidth="101.0" text="Confirmar" />
+                        <Label fx:id="lblUnitario_Resumen" layoutX="619.0" layoutY="251.0" text="Precio Unitario:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="619.0" layoutY="294.0" text="Precio Total:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblUnidad_Resumen" layoutX="727.0" layoutY="251.0" prefHeight="17.0" prefWidth="81.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblTotal_Resume" layoutX="727.0" layoutY="294.0" prefHeight="17.0" prefWidth="81.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="619.0" layoutY="191.0" text="Vehiculo:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblVehiculo_Resumen" layoutX="617.0" layoutY="221.0" prefHeight="17.0" prefWidth="157.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="631.0" layoutY="391.0" prefHeight="37.0" prefWidth="183.0">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="button_buscar_Cliente" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="286.0" mnemonicParsing="false" onAction="#buscar_cliente" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <ComboBox fx:id="combo_Genero_Cotizacion" layoutX="313.0" layoutY="375.0" prefHeight="25.0" prefWidth="146.0" promptText="Genero" />
+                        <Label layoutX="313.0" layoutY="418.0" text="Comuna:">
+                           <font>
+                              <Font name="Verdana" size="16.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txt_direccion_cotizacion1" layoutX="405.0" layoutY="415.0" prefHeight="25.0" prefWidth="161.0" />
                      </children>
                   </AnchorPane>
                </content>
+            </Tab>
+            <Tab style="-fx-background-color: C1C3C4;" text="  Registros   ">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button layoutX="38.0" layoutY="52.0" mnemonicParsing="false" text="Button" />
+                        <Label layoutX="227.0" layoutY="69.0" text="Label" />
+                     </children>
+                  </AnchorPane>
+              </content>
             </Tab>
             <Tab style="-fx-background-color: C1C3C4;" text="Modificar Cliente">
               <content>
@@ -202,16 +238,6 @@
                            </font>
                         </Label>
                         <TextField fx:id="tfGeneroCliente" disable="true" editable="false" layoutX="348.0" layoutY="356.0" />
-                     </children>
-                  </AnchorPane>
-              </content>
-            </Tab>
-            <Tab style="-fx-background-color: C1C3C4;" text="  Registros   ">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Button layoutX="38.0" layoutY="52.0" mnemonicParsing="false" text="Button" />
-                        <Label layoutX="227.0" layoutY="69.0" text="Label" />
                      </children>
                   </AnchorPane>
               </content>
