--- a/ProyectoDesarrollo/src/Vista/Usuario.fxml
+++ b/ProyectoDesarrollo/src/Vista/Usuario.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorUsuario">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorUsuario">
    <children>
       <TabPane layoutX="-3.0" layoutY="-1.0" prefHeight="620.0" prefWidth="812.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -129,7 +134,7 @@
                               </ImageView>
                            </children>
                         </Pane>
-                        <Button fx:id="bModificarUsuario" layoutX="404.0" layoutY="515.0" mnemonicParsing="false" onAction="#modificarUsuario" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Usuario" textFill="WHITE">
+                        <Button fx:id="bModificarUsuario" layoutX="325.0" layoutY="464.0" mnemonicParsing="false" onAction="#modificarUsuario" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Usuario" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
@@ -138,16 +143,10 @@
                            </cursor>
                         </Button>
                         <TextField fx:id="tCorreoUsuarioM" layoutX="447.0" layoutY="260.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tApellidoUsuarioM" layoutX="447.0" layoutY="195.0" prefHeight="25.0" prefWidth="255.0" />
                         <TextField fx:id="tRolUsuarioM" layoutX="58.0" layoutY="260.0" prefHeight="25.0" prefWidth="255.0" />
                         <TextField fx:id="tNombreUsuarioM" layoutX="58.0" layoutY="195.0" prefHeight="25.0" prefWidth="255.0" />
                         <TextField fx:id="tTelefonoUsuarioM" layoutX="58.0" layoutY="330.0" prefHeight="25.0" prefWidth="255.0" />
                         <TextField fx:id="tDireccionUsuarioM" layoutX="447.0" layoutY="330.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="447.0" layoutY="165.0" prefHeight="32.0" prefWidth="112.0" text="Apellido(s)">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
                         <Label layoutX="447.0" layoutY="301.0" prefHeight="29.0" prefWidth="112.0" text="Dirección">
                            <font>
                               <Font name="Verdana" size="14.0" />
@@ -179,26 +178,18 @@
                            </font>
                         </Label>
                         <TextField fx:id="tSedeUsuarioM" layoutX="58.0" layoutY="402.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="447.0" layoutY="373.0" prefHeight="29.0" prefWidth="112.0" text="Contraseña">
+                        <Label layoutX="447.0" layoutY="166.0" prefHeight="29.0" prefWidth="112.0" text="Contraseña">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tContrasenaUsuarioM" layoutX="447.0" layoutY="402.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="279.0" layoutY="438.0" prefHeight="29.0" prefWidth="112.0" text="Estado">
+                        <TextField fx:id="tContrasenaUsuarioM" layoutX="447.0" layoutY="195.0" prefHeight="25.0" prefWidth="255.0" />
+                        <Label layoutX="447.0" layoutY="373.0" prefHeight="29.0" prefWidth="112.0" text="Estado">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cbEstado" layoutX="279.0" layoutY="467.0" prefWidth="255.0" promptText="Elija el estado de su empleado" visibleRowCount="2" />
-                        <Button fx:id="bLimpiarCamposM" layoutX="248.0" layoutY="515.0" mnemonicParsing="false" onAction="#limpiarCamposM" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                           <font>
-                              <Font name="Verdana Bold" size="14.0" />
-                           </font>
-                        </Button>
+                        <ComboBox fx:id="cbEstado" layoutX="447.0" layoutY="402.0" prefWidth="255.0" promptText="Elija el estado de su empleado" visibleRowCount="2" />
                      </children>
                   </AnchorPane>
                </content>
